// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagsTile Snapshot Tests > Complex Scenarios > should render with many tags 1`] = `
<div
>

  <div
    class="_card--neutral_HASH_14 _card_HASH_2 flex-col p-[1rem] w-full"
    data-ods="card"
  >

    <section
      class="flex flex-col w-full"
    >

      <h4
        class="_text--heading-4_HASH_31"
        data-ods="text"
      >Tags
      </h4
      >

        <hr
          class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2 w-full"
          data-ods="divider"
        >

        <dl
          class="flex flex-col m-0"
        >

          <div
            class="flex flex-col gap-1"
          >

            <dt
              class="flex justify-between"
            >

              <div
                class="flex gap-1 items-center text-[var(--ods-color-text)]"
              >

                <span
                  class="_text--span_HASH_60 font-bold"
                  data-ods="text"
                >Tags assignés
                </span
                >
                </div
                >
                </dt
                >

                  <dd
                    class="m-0"
                  >

                    <div
                      class="h-[120px] min-w-[85px] overflow-auto w-full"
                    >

                      <div
                        class="flex flex-wrap h-full min-w-[85px] w-full"
                      >

                        <span
                          class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                          data-ods="badge"
                          style="max-width: -32px;"
                        >env:production
                        </span
                        >

                          <span
                            class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                            data-ods="badge"
                            style="max-width: -32px;"
                          >team:frontend
                          </span
                          >

                            <span
                              class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                              data-ods="badge"
                              style="max-width: -32px;"
                            >version:1.0.0
                            </span
                            >

                              <span
                                class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                                data-ods="badge"
                                style="max-width: -32px;"
                              >region:eu-west-1
                              </span
                              >

                                <span
                                  class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                                  data-ods="badge"
                                  style="max-width: -32px;"
                                >owner:john-doe
                                </span
                                >

                                  <span
                                    class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                                    data-ods="badge"
                                    style="max-width: -32px;"
                                  >project:my-project
                                  </span
                                  >

                                    <span
                                      class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                                      data-ods="badge"
                                      style="max-width: -32px;"
                                    >cost_center:engineering
                                    </span
                                    >

                                      <span
                                        class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                                        data-ods="badge"
                                        style="max-width: -32px;"
                                      >department:IT
                                      </span
                                      >
                                      </div
                                      >
                                      </div
                                      >

                                        <a
                                          class="_link_HASH_2 mt-4"
                                          data-ods="link"
                                          href="#"
                                        >Manager les tags

                                          <span
                                            class="_icon--external-link_HASH_232 _icon_HASH_2"
                                            data-ods="icon"
                                            role="presentation"
                                          >
                                          </span
                                          >
                                          </a
                                          >

                                            <hr
                                              class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2"
                                              data-ods="divider"
                                            >
                                          </dd
                                          >
                                          </div
                                          >
                                          </dl
                                          >
                                          </section
                                          >
                                          </div
                                          >
                                          </div
                                          >
`;

exports[`TagsTile Snapshot Tests > Complex Scenarios > should render with single tag 1`] = `
<div
>

  <div
    class="_card--neutral_HASH_14 _card_HASH_2 flex-col p-[1rem] w-full"
    data-ods="card"
  >

    <section
      class="flex flex-col w-full"
    >

      <h4
        class="_text--heading-4_HASH_31"
        data-ods="text"
      >Tags
      </h4
      >

        <hr
          class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2 w-full"
          data-ods="divider"
        >

        <dl
          class="flex flex-col m-0"
        >

          <div
            class="flex flex-col gap-1"
          >

            <dt
              class="flex justify-between"
            >

              <div
                class="flex gap-1 items-center text-[var(--ods-color-text)]"
              >

                <span
                  class="_text--span_HASH_60 font-bold"
                  data-ods="text"
                >Tags assignés
                </span
                >
                </div
                >
                </dt
                >

                  <dd
                    class="m-0"
                  >

                    <div
                      class="h-[120px] min-w-[85px] overflow-auto w-full"
                    >

                      <div
                        class="flex flex-wrap h-full min-w-[85px] w-full"
                      >

                        <span
                          class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                          data-ods="badge"
                          style="max-width: -32px;"
                        >environment:staging
                        </span
                        >
                        </div
                        >
                        </div
                        >

                          <a
                            class="_link_HASH_2 mt-4"
                            data-ods="link"
                            href="#"
                          >Manager les tags

                            <span
                              class="_icon--external-link_HASH_232 _icon_HASH_2"
                              data-ods="icon"
                              role="presentation"
                            >
                            </span
                            >
                            </a
                            >

                              <hr
                                class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2"
                                data-ods="divider"
                              >
                            </dd
                            >
                            </div
                            >
                            </dl
                            >
                            </section
                            >
                            </div
                            >
                            </div
                            >
`;

exports[`TagsTile Snapshot Tests > Empty State > should render empty tags tile 1`] = `
<div
>

  <div
    class="_card--neutral_HASH_14 _card_HASH_2 flex-col p-[1rem] w-full"
    data-ods="card"
  >

    <section
      class="flex flex-col w-full"
    >

      <h4
        class="_text--heading-4_HASH_31"
        data-ods="text"
      >Tags
      </h4
      >

        <hr
          class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2 w-full"
          data-ods="divider"
        >

        <dl
          class="flex flex-col m-0"
        >

          <div
            class="flex flex-col gap-1"
          >

            <dt
              class="flex justify-between"
            >

              <div
                class="flex gap-1 items-center text-[var(--ods-color-text)]"
              >

                <span
                  class="_text--span_HASH_60 font-bold"
                  data-ods="text"
                >Tags assignés
                </span
                >
                </div
                >
                </dt
                >

                  <dd
                    class="m-0"
                  >

                    <div
                      class="h-[120px] min-w-[85px] overflow-auto w-full"
                    >

                      <span
                      >Aucun tag n'est associé
                      </span
                      >
                      </div
                      >

                        <a
                          class="_link_HASH_2 mt-4"
                          data-ods="link"
                          href="#"
                        >Ajouter un tag

                          <span
                            class="_icon--external-link_HASH_232 _icon_HASH_2"
                            data-ods="icon"
                            role="presentation"
                          >
                          </span
                          >
                          </a
                          >

                            <hr
                              class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2"
                              data-ods="divider"
                            >
                          </dd
                          >
                          </div
                          >
                          </dl
                          >
                          </section
                          >
                          </div
                          >
                          </div
                          >
`;

exports[`TagsTile Snapshot Tests > Empty State > should render with empty tags 1`] = `
<div
>

  <div
    class="_card--neutral_HASH_14 _card_HASH_2 flex-col p-[1rem] w-full"
    data-ods="card"
  >

    <section
      class="flex flex-col w-full"
    >

      <h4
        class="_text--heading-4_HASH_31"
        data-ods="text"
      >Tags
      </h4
      >

        <hr
          class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2 w-full"
          data-ods="divider"
        >

        <dl
          class="flex flex-col m-0"
        >

          <div
            class="flex flex-col gap-1"
          >

            <dt
              class="flex justify-between"
            >

              <div
                class="flex gap-1 items-center text-[var(--ods-color-text)]"
              >

                <span
                  class="_text--span_HASH_60 font-bold"
                  data-ods="text"
                >Tags assignés
                </span
                >
                </div
                >
                </dt
                >

                  <dd
                    class="m-0"
                  >

                    <div
                      class="h-[120px] min-w-[85px] overflow-auto w-full"
                    >

                      <span
                      >Aucun tag n'est associé
                      </span
                      >
                      </div
                      >

                        <a
                          class="_link_HASH_2 mt-4"
                          data-ods="link"
                          href="#"
                        >Ajouter un tag

                          <span
                            class="_icon--external-link_HASH_232 _icon_HASH_2"
                            data-ods="icon"
                            role="presentation"
                          >
                          </span
                          >
                          </a
                          >

                            <hr
                              class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2"
                              data-ods="divider"
                            >
                          </dd
                          >
                          </div
                          >
                          </dl
                          >
                          </section
                          >
                          </div
                          >
                          </div
                          >
`;

exports[`TagsTile Snapshot Tests > Empty State > should render without onEditTags callback 1`] = `
<div
>

  <div
    class="_card--neutral_HASH_14 _card_HASH_2 flex-col p-[1rem] w-full"
    data-ods="card"
  >

    <section
      class="flex flex-col w-full"
    >

      <h4
        class="_text--heading-4_HASH_31"
        data-ods="text"
      >Tags
      </h4
      >

        <hr
          class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2 w-full"
          data-ods="divider"
        >

        <dl
          class="flex flex-col m-0"
        >

          <div
            class="flex flex-col gap-1"
          >

            <dt
              class="flex justify-between"
            >

              <div
                class="flex gap-1 items-center text-[var(--ods-color-text)]"
              >

                <span
                  class="_text--span_HASH_60 font-bold"
                  data-ods="text"
                >Tags assignés
                </span
                >
                </div
                >
                </dt
                >

                  <dd
                    class="m-0"
                  >

                    <div
                      class="h-[120px] min-w-[85px] overflow-auto w-full"
                    >

                      <span
                      >Aucun tag n'est associé
                      </span
                      >
                      </div
                      >

                        <a
                          class="_link_HASH_2 mt-4"
                          data-ods="link"
                          href="#"
                        >Ajouter un tag

                          <span
                            class="_icon--external-link_HASH_232 _icon_HASH_2"
                            data-ods="icon"
                            role="presentation"
                          >
                          </span
                          >
                          </a
                          >

                            <hr
                              class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2"
                              data-ods="divider"
                            >
                          </dd
                          >
                          </div
                          >
                          </dl
                          >
                          </section
                          >
                          </div
                          >
                          </div
                          >
`;

exports[`TagsTile Snapshot Tests > With Tags > should render tags tile with tags 1`] = `
<div
>

  <div
    class="_card--neutral_HASH_14 _card_HASH_2 flex-col p-[1rem] w-full"
    data-ods="card"
  >

    <section
      class="flex flex-col w-full"
    >

      <h4
        class="_text--heading-4_HASH_31"
        data-ods="text"
      >Tags
      </h4
      >

        <hr
          class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2 w-full"
          data-ods="divider"
        >

        <dl
          class="flex flex-col m-0"
        >

          <div
            class="flex flex-col gap-1"
          >

            <dt
              class="flex justify-between"
            >

              <div
                class="flex gap-1 items-center text-[var(--ods-color-text)]"
              >

                <span
                  class="_text--span_HASH_60 font-bold"
                  data-ods="text"
                >Tags assignés
                </span
                >
                </div
                >
                </dt
                >

                  <dd
                    class="m-0"
                  >

                    <div
                      class="h-[120px] min-w-[85px] overflow-auto w-full"
                    >

                      <div
                        class="flex flex-wrap h-full min-w-[85px] w-full"
                      >

                        <span
                          class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                          data-ods="badge"
                          style="max-width: -32px;"
                        >environment:production
                        </span
                        >

                          <span
                            class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                            data-ods="badge"
                            style="max-width: -32px;"
                          >team:frontend
                          </span
                          >

                            <span
                              class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                              data-ods="badge"
                              style="max-width: -32px;"
                            >version:1.0.0
                            </span
                            >
                            </div
                            >
                            </div
                            >

                              <a
                                class="_link_HASH_2 mt-4"
                                data-ods="link"
                                href="#"
                              >Manager les tags

                                <span
                                  class="_icon--external-link_HASH_232 _icon_HASH_2"
                                  data-ods="icon"
                                  role="presentation"
                                >
                                </span
                                >
                                </a
                                >

                                  <hr
                                    class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2"
                                    data-ods="divider"
                                  >
                                </dd
                                >
                                </div
                                >
                                </dl
                                >
                                </section
                                >
                                </div
                                >
                                </div
                                >
`;

exports[`TagsTile Snapshot Tests > With Tags > should render with custom lineNumber 1`] = `
<div
>

  <div
    class="_card--neutral_HASH_14 _card_HASH_2 flex-col p-[1rem] w-full"
    data-ods="card"
  >

    <section
      class="flex flex-col w-full"
    >

      <h4
        class="_text--heading-4_HASH_31"
        data-ods="text"
      >Tags
      </h4
      >

        <hr
          class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2 w-full"
          data-ods="divider"
        >

        <dl
          class="flex flex-col m-0"
        >

          <div
            class="flex flex-col gap-1"
          >

            <dt
              class="flex justify-between"
            >

              <div
                class="flex gap-1 items-center text-[var(--ods-color-text)]"
              >

                <span
                  class="_text--span_HASH_60 font-bold"
                  data-ods="text"
                >Tags assignés
                </span
                >
                </div
                >
                </dt
                >

                  <dd
                    class="m-0"
                  >

                    <div
                      class="h-[120px] min-w-[85px] overflow-auto w-full"
                    >

                      <div
                        class="flex flex-wrap h-full min-w-[85px] w-full"
                      >

                        <span
                          class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                          data-ods="badge"
                          style="max-width: -32px;"
                        >environment:production
                        </span
                        >

                          <span
                            class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                            data-ods="badge"
                            style="max-width: -32px;"
                          >team:frontend
                          </span
                          >

                            <span
                              class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                              data-ods="badge"
                              style="max-width: -32px;"
                            >version:1.0.0
                            </span
                            >
                            </div
                            >
                            </div
                            >

                              <a
                                class="_link_HASH_2 mt-4"
                                data-ods="link"
                                href="#"
                              >Manager les tags

                                <span
                                  class="_icon--external-link_HASH_232 _icon_HASH_2"
                                  data-ods="icon"
                                  role="presentation"
                                >
                                </span
                                >
                                </a
                                >

                                  <hr
                                    class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2"
                                    data-ods="divider"
                                  >
                                </dd
                                >
                                </div
                                >
                                </dl
                                >
                                </section
                                >
                                </div
                                >
                                </div
                                >
`;

exports[`TagsTile Snapshot Tests > With Tags > should render with displayInternalTags enabled 1`] = `
<div
>

  <div
    class="_card--neutral_HASH_14 _card_HASH_2 flex-col p-[1rem] w-full"
    data-ods="card"
  >

    <section
      class="flex flex-col w-full"
    >

      <h4
        class="_text--heading-4_HASH_31"
        data-ods="text"
      >Tags
      </h4
      >

        <hr
          class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2 w-full"
          data-ods="divider"
        >

        <dl
          class="flex flex-col m-0"
        >

          <div
            class="flex flex-col gap-1"
          >

            <dt
              class="flex justify-between"
            >

              <div
                class="flex gap-1 items-center text-[var(--ods-color-text)]"
              >

                <span
                  class="_text--span_HASH_60 font-bold"
                  data-ods="text"
                >Tags assignés
                </span
                >
                </div
                >
                </dt
                >

                  <dd
                    class="m-0"
                  >

                    <div
                      class="h-[120px] min-w-[85px] overflow-auto w-full"
                    >

                      <div
                        class="flex flex-wrap h-full min-w-[85px] w-full"
                      >

                        <span
                          class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                          data-ods="badge"
                          style="max-width: -32px;"
                        >environment:production
                        </span
                        >

                          <span
                            class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                            data-ods="badge"
                            style="max-width: -32px;"
                          >team:frontend
                          </span
                          >

                            <span
                              class="_badge--md_HASH_56 _badge--neutral_HASH_27 _badge_HASH_2 inline-block mb-1 mr-1 truncate"
                              data-ods="badge"
                              style="max-width: -32px;"
                            >version:1.0.0
                            </span
                            >
                            </div
                            >
                            </div
                            >

                              <a
                                class="_link_HASH_2 mt-4"
                                data-ods="link"
                                href="#"
                              >Manager les tags

                                <span
                                  class="_icon--external-link_HASH_232 _icon_HASH_2"
                                  data-ods="icon"
                                  role="presentation"
                                >
                                </span
                                >
                                </a
                                >

                                  <hr
                                    class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2"
                                    data-ods="divider"
                                  >
                                </dd
                                >
                                </div
                                >
                                </dl
                                >
                                </section
                                >
                                </div
                                >
                                </div
                                >
`;
